--- a/frontend/src/components/itemsList/itemsList.css
+++ b/frontend/src/components/itemsList/itemsList.css
@@ -10,8 +10,9 @@
       url(https://example.com/MaterialIcons-Regular.ttf) format('truetype');
   }
 .wrapper {
-    width : 700px;;
-
+    width : 900px;
+    margin : 30px 80px;
+    margin-right : 10px;
 }
 .categoryWrapper {
     margin : 20px 0 ;
@@ -33,16 +34,22 @@
     background: #FFFFFF;
     width: 182px;
     height: fit-content;
-    margin-left:20px;
-    box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.05);    border-radius:12px ;
+    margin: 10px 10px;
+
+    box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.05);   
+     border-radius:12px ;
     border : none;
     align-items: center;
     display: inline-flex;
     justify-content: space-around;
     cursor : pointer
 }
-.itemBtn h1 {
-    font-size: 16px;
+.itemsWrapper :hover {
+    box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.05); 
+
+}
+.itemBtn h2 {
+    font-size: 18px;
 }
 .itemBtn span {
     margin-left: 10px;
@@ -51,4 +58,44 @@
     width:14px;
 }
 
+/* HEADER */
+.header  {
+    display : flex;
+    flex-direction:  row;
+    height : fit-content;
+    align-items: center;
+    margin-bottom:57px;
+}
+.header h2 {
+    width :450px;
+    text-align: start;
+    font-family: Quicksand;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 32px;
+}
+.header h2 span {
+    color : #F9A109;
+}
+
+.header div {
+    display : inline-flex;
+    align-items: center;
+}
+.search{
+    background: #FFFFFF;
+    box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.04);
+    border-radius: 12px;
+    padding : 16px;
+}
+.search input {
+    border : none;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;    
+    color: #BDBDBD;
+    margin-left:23px;
+}
 
