--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,24 @@
 .App {
   text-align: center;
 }
+.wrapperOfAll{
+  height: 90vh;
+  margin: 2rem;
+  display: grid;
+  grid-template-areas:   
+    "nav main add";  
+  grid-template-columns: 5% 1fr 15%;
+  grid-row-gap: 10px;
+  grid-column-gap: 10px;
+}
+.main{
+  background-color: aqua;
+  grid-area: "main";
+}
 
+.add{
+  grid-area: "add";
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
